Fix uninformative error on login page
